--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -1,16 +1,18 @@
-$blue: #4361ee;
+$gold: #D9B08C;
 
 .root {
-  background-color: #fff;
-  border: 1px solid #dedede;
+  border: 1px solid $gold;
   border-radius: 6px;
   overflow: hidden;
   margin-bottom: 15px;
   position: relative;
+  color: #d1e8e2;
+  border-radius: 10px;
+  background-color: #116466; 
 
   &:hover {
-    border: 1px solid $blue;
-    box-shadow: 0 0 0 1px $blue;
+    border: 1px solid $gold;
+    box-shadow: 0 0 0 1px $gold;
 
     .editButtons {
       opacity: 1;
@@ -19,8 +21,8 @@ $blue: #4361ee;
 
   &Full {
     &:hover {
-      background-color: #fff;
-      border: 1px solid #dedede;
+     background-color: #116466;
+      border: 1px solid $gold;
       box-shadow: none;
     }
   }
@@ -57,13 +59,14 @@ $blue: #4361ee;
 .title {
   font-size: 28px;
   margin: 0;
+  color: #d1e8e2;
 
   a {
     text-decoration: none;
-    color: #000;
+    color: #d1e8e2;
 
     &:hover {
-      color: $blue;
+      color: $gold;
     }
   }
 
@@ -77,6 +80,7 @@ $blue: #4361ee;
   list-style: none;
   padding: 0;
   margin: 5px 0 0 0;
+  color: #d1e8e2;
 
   li {
     display: inline-block;
@@ -90,7 +94,7 @@ $blue: #4361ee;
 
     a {
       text-decoration: none;
-      color: #000;
+      color: #d1e8e2;
     }
   }
 }
@@ -115,8 +119,8 @@ $blue: #4361ee;
 }
 
 .skeleton {
-  background-color: #fff;
-  border: 1px solid #dedede;
+  background-color: #116466;
+  border: 1px solid #D9B08C;
   border-radius: 6px;
   overflow: hidden;
   margin-bottom: 15px;
@@ -151,7 +155,7 @@ $blue: #4361ee;
   position: absolute;
   right: 15px;
   top: 15px;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: #116466; 
   border-radius: 10px;
   opacity: 0;
   transition: all 0.15s ease-in-out;
