--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .root {
-  background-color:black;
+  background-color: #116466;
   padding: 10px 0;
-  border-bottom: 1px solid #ff2600;
+  border-bottom: 1px solid #D9B08C;
   margin-bottom: 30px;
 }
 
@@ -11,8 +11,8 @@
 }
 
 .logo {
-  background-color: black;
-  color: #fff;
+  background-color: #D9B08C;
+  color: #d1e8e2;
   font-weight: 700;
   line-height: 35px;
   text-transform: uppercase;
@@ -25,21 +25,26 @@
  
  
   &:hover {    
-    background: linear-gradient(135deg, rgba(2,0,36,1) 0%, rgba(0,0,2,1) 0%, rgba(0,0,0,1) 47%, rgba(255,38,0,1) 100%, rgba(255,130,0,1) 100%, rgba(255,130,0,1) 100%);
-  }
+    background: linear-gradient(0deg, rgba(17,100,102,1) 0%, rgba(217,176,140,1) 100%); }
 }
 
 .buttons {
+  color: #d1e8e2;
+  
   button {
     margin-left: 10px;
-    background: black;
+    background: #D9B08C;
+    color: #d1e8e2;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+
     &:hover {
       background: rgb(2,0,36);
-     background: linear-gradient(135deg, rgba(2,0,36,1) 0%, rgba(0,0,2,1) 0%, rgba(0,0,0,1) 47%, rgba(255,38,0,1) 100%, rgba(255,130,0,1) 100%, rgba(255,130,0,1) 100%);}
- }
+   background: linear-gradient(0deg, rgba(17,100,102,1) 0%, rgba(217,176,140,1) 100%);}
+}
   
 
   a {
     text-decoration: none;
+    
   }
 }
