--- a/src/components/SideBlock/SideBlock.module.scss
+++ b/src/components/SideBlock/SideBlock.module.scss
@@ -1,18 +1,14 @@
 .root {
   margin-bottom: 20px;
   color: #d1e8e2;
-  border-radius: 10px;
-  background-color: #116466;  
+  background-color: #2c3531;
 }
-
 .title {
   padding: 15px 15px 0 15px;
-  background-color: #116466;
-  border-radius:10px;
+  background-color: #2c3531;
   color: #d1e8e2;
   }
   .children{
-    background-color: #116466;
-    border-radius:10px;
+    background-color: #2c3531;
     color: #d1e8e2;
   }
