--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -2,13 +2,13 @@ $gold: #D9B08C;
 
 .root {
   border: 1px solid $gold;
-  border-radius: 6px;
+  border-radius: 10px;
   overflow: hidden;
   margin-bottom: 15px;
   position: relative;
   color: #d1e8e2;
   border-radius: 10px;
-  background-color: #116466; 
+  background-color: #2c3531; 
 
   &:hover {
     border: 1px solid $gold;
@@ -21,9 +21,10 @@ $gold: #D9B08C;
 
   &Full {
     &:hover {
-     background-color: #116466;
+     background-color: #2c3531;
       border: 1px solid $gold;
       box-shadow: none;
+      border-radius: 10px;
     }
   }
 }
@@ -103,7 +104,7 @@ $gold: #D9B08C;
   list-style: none;
   padding: 0;
   margin: 20px 0 0 0;
-
+ 
   li {
     display: inline-flex;
     align-items: center;
@@ -155,7 +156,7 @@ $gold: #D9B08C;
   position: absolute;
   right: 15px;
   top: 15px;
-  background-color: #116466; 
+  background-color: #2c3531; 
   border-radius: 10px;
   opacity: 0;
   transition: all 0.15s ease-in-out;
