--- a/src/components/UserInfo/UserInfo.module.scss
+++ b/src/components/UserInfo/UserInfo.module.scss
@@ -3,7 +3,7 @@
   align-items: center;
   color: #d1e8e2;
   border-radius: 10px;
-  background-color: #116466;
+  background-color: #2c3531;
 }
 
 .avatar {
