--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Roboto';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #2c3531!important;
+  background-color: #116466!important;
   color: #d1e8e2;
 
 }
