--- a/src/components/AddComment/AddComment.module.scss
+++ b/src/components/AddComment/AddComment.module.scss
@@ -4,7 +4,7 @@
   padding-bottom: 20px;
   padding-right: 20px;
   padding-left: 17px;
-  background-color: #2c3531; 
+  background-color: rgba(0, 0, 0, 0.6)!important;
   color: #d1e8e2;
  }
 
@@ -13,11 +13,11 @@
 }
 .title {
   padding: 15px 15px 0 15px;
-  background-color: #2c3531; 
+  background-color: rgba(0, 0, 0, 0.6)!important;
   color: #d1e8e2;
   }
   .children{
-    background-color: #2c3531;
+    background-color: rgba(0, 0, 0, 0.6)!important;
     color: #d1e8e2;
   }
 
@@ -44,7 +44,7 @@
 }
 .listItem {
   color: #d1e8e2;
-  background-color: #2c3531; 
+  background-color: rgba(0, 0, 0, 0.6)!important;
   margin-bottom: 8px;
   &primary {
     color: #d1e8e2; /* Цвет шрифта для основного текста */
