--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,8 +1,11 @@
 .root {
-  background-color: #2c3531;
-  padding: 10px 0;
+  // background-color: #2c3531; 
+  background-color: rgba(0, 0, 0, 0.6)!important;
+  background-size: cover; /* Изображение будет растягиваться на всю ширину и высоту экрана, сохраняя пропорции */
+  background-repeat: no-repeat; /* Изображение не будет повторяться */
+  background-position: center center; 
   border-bottom: 1px solid #D9B08C;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 
 .inner {
@@ -17,11 +20,12 @@
   line-height: 35px;
   text-transform: uppercase;
   letter-spacing: 0.15px;
-  border-radius: 5px;
+  border-radius: 40px;
   padding: 0 10px;
   text-decoration: none;
- 
- 
+  background-color: rgba(255, 255, 255, 0.2) !important; 
+  margin-bottom: 15px;
+  margin-top: 15px;
  
   &:hover {    
     background: linear-gradient(0deg, rgba(17,100,102,1) 0%, rgba(217,176,140,1) 100%); }
@@ -29,10 +33,12 @@
 
 .buttons {
   color: #d1e8e2;
+  margin-bottom: 15px;
+  margin-top: 15px;
   
   button {
     margin-left: 10px;
-    background: #D9B08C;
+    background-color: rgba(255, 255, 255, 0.2) !important; 
     color: #d1e8e2;
   
     &:hover {
