--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -8,7 +8,9 @@ $gold: #D9B08C;
   position: relative;
   color: #d1e8e2;
   border-radius: 10px;
-  background-color: #2c3531; 
+  background-color: rgba(0, 0, 0, 0.6)!important; /* Полупрозрачный фон для всего контейнера */
+  border-radius: 15px; /* Закругленные углы контейнера */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Тень для глубины */
 
   &:hover {
     border: 1px solid $gold;
@@ -21,7 +23,7 @@ $gold: #D9B08C;
 
   &Full {
     &:hover {
-     background-color: #2c3531;
+      background-color: rgba(0, 0, 0, 0.6)!important;
       border: 1px solid $gold;
       box-shadow: none;
       border-radius: 10px;
