--- a/src/components/UserInfo/UserInfo.module.scss
+++ b/src/components/UserInfo/UserInfo.module.scss
@@ -2,15 +2,16 @@
   display: flex;
   align-items: center;
   color: #d1e8e2;
-  border-radius: 10px;
-  background-color: #2c3531;
+  border-radius: 20px;
+  background-color: rgba(0, 0, 0, 0.6)!important;
 }
 
 .avatar {
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   border-radius: 30px;
   margin-right: 10px;
+  margin-left: 2px;
 }
 
 .userName {
@@ -27,5 +28,6 @@
 
 .additional {
   font-size: 12px;
-  opacity: 0.6;
+  opacity: 0.3;
+  color: #d1e8e2 !important;
 }
