--- a/src/pages/AddPost/AddPost.module.scss
+++ b/src/pages/AddPost/AddPost.module.scss
@@ -30,7 +30,7 @@
     }
     .editor-toolbar {
       border: 0;
-      background-color: rgb(0 0 0 / 2%);
+      background-color: rgba(0, 0, 0, 0.6)!important;
     }
   }
 }
