--- a/src/components/UserInfo/UserInfo.module.scss
+++ b/src/components/UserInfo/UserInfo.module.scss
@@ -3,7 +3,9 @@
   align-items: center;
   color: #d1e8e2;
   border-radius: 20px;
+  padding: 15px 15px 15px 15px;
   background-color: rgba(0, 0, 0, 0.6)!important;
+  border: 1px solid #D9B08C;
 }
 
 .avatar {
