--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -33,8 +33,9 @@ $gold: #D9B08C;
 
 .image {
   width: 100%;
-  height: 300px;
+  height: 280px;
   object-fit: cover;
+  
 
   &Full {
     min-height: 300px;
@@ -122,7 +123,7 @@ $gold: #D9B08C;
 }
 
 .skeleton {
-  background-color: #116466;
+  background-color: rgba(0, 0, 0, 0.6)!important; 
   border: 1px solid #D9B08C;
   border-radius: 6px;
   overflow: hidden;
@@ -158,7 +159,6 @@ $gold: #D9B08C;
   position: absolute;
   right: 15px;
   top: 15px;
-  background-color: #2c3531; 
   border-radius: 10px;
   opacity: 0;
   transition: all 0.15s ease-in-out;
